--- a/examples/Makefile
+++ b/examples/Makefile
@@ -20,7 +20,7 @@ HWPLAT:=$(shell cat $(ROOT_DIR)/../hwplatform)
 
 # sets CCFLAGS hw platform dependant
 ifeq ($(HWPLAT),BananaPI)
-        CCFLAGS=-Wall -Ofast -mfpu=vfpv4 -mfloat-abi=hard -march=armv7 -mtune=cortex-a7 -DBANANAPI
+        CCFLAGS=-Ofast -mfpu=vfpv4 -mfloat-abi=hard -march=armv7 -mtune=cortex-a7 -DBANANAPI
 else # fallback to raspberry
         # The recommended compiler flags for the Raspberry Pi
         CCFLAGS=-Ofast -mfpu=vfp -mfloat-abi=hard -march=armv6zk -mtune=arm1176jzf-s
@@ -38,7 +38,7 @@ CFLAGS=${CCFLAGS}
 all: ${PROGRAMS}
 
 ${PROGRAMS}: ${SOURCES}
-	$(CXX) $(CFLAGS) -Wall $@.cpp -o $@ -lArduiPi_OLED
+	$(CXX) $(CFLAGS) -Wall -I../ $@.cpp -o $@ -lArduiPi_OLED
 
 clean:
 	rm -rf $(PROGRAMS)
